--- a/EbestTradeBot_V1/EbestTradeBot_V2/EbestTradeBot_V2.csproj
+++ b/EbestTradeBot_V1/EbestTradeBot_V2/EbestTradeBot_V2.csproj
@@ -1,10 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EbestTradeBot.Core\EbestTradeBot.Core.csproj" />
   </ItemGroup>
 </Project>
