--- a/EbestTradeBot_V1/EbestTradeBot_V2/EbestTradeBot_V2.csproj
+++ b/EbestTradeBot_V1/EbestTradeBot_V2/EbestTradeBot_V2.csproj
@@ -3,8 +3,18 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Assets\Icon\Stock.ico</ApplicationIcon>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assets\Icon\Stock.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Icon\Stock.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
