2차매수 구현 및 테스트 진행중 시간 함수 TimeSpan 비교방식으로 변경 2차매수 여부 Configuration 체크박스 및 기능 추가

--- a/EbestTradeBot_V1/EbestTradeBot.Core/EbestTradeBot.Core.csproj
+++ b/EbestTradeBot_V1/EbestTradeBot.Core/EbestTradeBot.Core.csproj
@@ -38,10 +38,10 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="TradedStock.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
