--- a/EbestTradeBot_V1/EbestTradeBot.Core/appsettings.json
+++ b/EbestTradeBot_V1/EbestTradeBot.Core/appsettings.json
@@ -11,5 +11,6 @@
   "DayCount": 0,
   "IsTestTrade": false,
   "ReplySecond": 0,
-  "CooldownDay": 0
+  "CooldownDay": 0,
+  "IsSecondTrade": false
 }
